# sampledex_daw_pro

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
BundledPlugins/: README.md
Source/: AppMetadata.h  Main.cpp  MainComponent.h  MidiDeviceRouter.cpp  MidiDeviceRouter.h  ProjectSerializer.h  StepSequencerComponent.h  StreamingClipSource.cpp
Source/app/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/audio/: MidiDeviceRouter.cpp  MidiDeviceRouter.h  StreamingClipSource.h
Source/core/: AppState.h  Theme.h
Source/engine/: ChordEngine.cpp  ChordEngine.h  RealtimeAudioEngine.cpp  RealtimeAudioEngine.h  RealtimeGraphScheduler.h  RealtimeStateSnapshot.cpp  RealtimeStateSnapshot.h  ScheduledMidiOutput.h  SmfPipeline.h  TimelineModel.h  Track.h  TransportEngine.h
Source/project/: ProjectSerializer.h
Source/tests/: SmfPipelineStaticTests.cpp
Source/ui/: BrowserPanel.h  LcdDisplay.h  Mixer.h  MixerView.h  NormalizeDialog.h  PianoRollComponent.h  TimelineComponent.h  TimelineView.h  TrackList.h  TransportBar.h
docs/: compile_review.md
scripts/: release_macos.sh
